feat: tmp commit

--- a/resources/translations/default/job.csv
+++ b/resources/translations/default/job.csv
@@ -1,2 +1,4 @@
 "Job"
 "Company"
+"You are about to remove this Company and all the associated Places !\n Are you sure ?"
+"You are about to remove this Place !\n Are you sure ?"
