feat: company page, search text

--- a/resources/translations/default/job.csv
+++ b/resources/translations/default/job.csv
@@ -2,3 +2,13 @@
 "Company"
 "You are about to remove this Company and all the associated Places !\n Are you sure ?"
 "You are about to remove this Place !\n Are you sure ?"
+"Contract type"
+"Header"
+"Name"
+"Description"
+"Address"
+"Category"
+"Contract type"
+"Income from:"
+"to:"
+"Keywords"
