--- a/resources/translations/fr/job.csv
+++ b/resources/translations/fr/job.csv
@@ -1,2 +1,13 @@
 "Job":"Job"
 "Company":"Entreprise"
+"You are about to remove this Company and all the associated Places !\n Are you sure ?"
+"You are about to remove this Place !\n Are you sure ?"
+"Contract type":"Type de contrat"
+"Header":"Image d'entête"
+"Name":"Titre"
+"Description":"Description"
+"Address":"Adresse"
+"Category":"Catégorie"
+"Income from:":"Rémunération entre:"
+"to:":"et:"
+"Keywords":"Mot clés"
