feat: stats, administrators, contact form

--- a/resources/translations/fr/job.csv
+++ b/resources/translations/fr/job.csv
@@ -1,15 +1,59 @@
-"Job":"Job"
-"Company":"Entreprise"
-"You are about to remove this Company and all the associated Places !\n Are you sure ?"
-"You are about to remove this Place !\n Are you sure ?"
-"You are about to remove this Category !\n Are you sure ?"
-"Contract type":"Type de contrat"
-"Header":"Image d'entête"
-"Name":"Titre"
-"Description":"Description"
-"Address":"Adresse"
-"Category":"Catégorie"
-"Income from:":"Rémunération entre:"
-"to:":"et:"
-"Keywords":"Mot clés"
-"Place successfully deleted.":"Job supprimé."
+"A new contact form has been sent for the following offer:";"Un nouveau formulaire de contact à été envoyé:"
+"Address";"Addresse"
+"Administrators";"Administrateurs"
+"All fields are required !";"Tout les champs sont requis !"
+"Alternate name for 'Company'";"Nom alternatif pour 'Entreprise'"
+"Alternate name for 'Place'";"Nom alternatif pour 'Emploi'"
+"Categories";"Catégories"
+"Category";"Catégorie"
+"Category enabled";"Catégorie activée"
+"Close";"Fermer"
+"Companies";"Sociétés"
+"Company";"Société"
+"Company enabled";"Société activée"
+"Contact form";"Formulaire de contact"
+"Contract type";"Type de contrat"
+"Description";"Description"
+"Display Search";"Afficher la recherche"
+"Display contact";"Affichage du contact"
+"Display income";"Afficher la rémunération"
+"Display place icon";"Afficher l'icône de l'offre"
+"E-Mail";"Email"
+"E-mail";"Email"
+"Email";"E-mail"
+"Email & Contact form";"E-mail & Formulaire de contact"
+"Email successfully sent.";"Email envoyé avec succès"
+"Employee count";"Nombre d'employés"
+"Form error";"Erreur"
+"General";"Général"
+"Header";"Entête"
+"Hidden";"Masqué"
+"Icon";"Icône"
+"Import a header";"Importer un entête"
+"Import a header image";"Ajouter une illustration d'entête"
+"Import a logo";"Importer un logo"
+"Import an icon";"Importer une icône"
+"Import an icon image";"Importer une icône"
+"Income from:";"Rémunération entre:"
+"Job";"Emploi"
+"Keywords";"Mot clés"
+"Logo";"Logo"
+"Name";"Nom"
+"New contact for: ";"Nouveau contact pour:"
+"New contact for: %s";"Nouveau contact pour: %s"
+"None";"Aucun"
+"Place";"Emploi"
+"Place enabled";"Emploi activé"
+"Place successfully deleted.";"Emploi supprimé."
+"Places";"Emplois"
+"Success.";"Succès"
+"Thank you";"Merci"
+"The category you are trying to edit doesn't exists.";"La catégorie que vous tentez d'éditer n'existe pas."
+"The company you are trying to edit doesn't exists.";"La société que vous tentez d'éditer n'existe pas."
+"The place you are trying to edit doesn't exists.";"L'emploi que vous tentez d'éditer n'existe pas."
+"Use global configuration";"Utiliser le paramètre global"
+"Website";"Site web"
+"You are about to remove this Category !\n Are you sure ?";"Vous êtes sur le point de supprimer cette catégorie ! Êtes vous sûr ?"
+"You are about to remove this Company and all the associated Places !\n Are you sure ?";"Vous êtes sur le point de supprimer cette société et tout les emplois associés ! Êtes vous sûr ?"
+"You are about to remove this Place !\n Are you sure ?";"Vous êtes sur le point de supprimer cet emploi ! Êtes vous sûr ?"
+"to:";"et:"
