feat: edit place, company, create place, save contact message, fix pull to refresh/load more fix templates, nav

--- a/resources/translations/default/job.csv
+++ b/resources/translations/default/job.csv
@@ -70,3 +70,15 @@
 "The place you are trying to edit doesn't exists."
 "Use global configuration"
 "Website"
+"Place saved."
+"Company saved."
+"This place is inactive."
+"You are not allowed to create a place for this company"
+"Is active"
+"Add company"
+"Create a new company"
+"Manage"
+"Add place"
+"Create a new place"
+"Add category"
+"Create a new Category"
