--- a/resources/translations/fr/job.csv
+++ b/resources/translations/fr/job.csv
@@ -1,4 +1,7 @@
 "A new contact form has been sent for the following offer:";"Un nouveau formulaire de contact à été envoyé:"
+"Add category";"Ajouter une catégorie"
+"Add company";"Ajouter une société"
+"Add place";"Ajouter un emploi"
 "Address";"Addresse"
 "Administrators";"Administrateurs"
 "All fields are required !";"Tout les champs sont requis !"
@@ -11,8 +14,12 @@
 "Companies";"Sociétés"
 "Company";"Société"
 "Company enabled";"Société activée"
+"Company saved.";"Société enregistrée"
 "Contact form";"Formulaire de contact"
 "Contract type";"Type de contrat"
+"Create a new Category";"Ajouter une catégorie"
+"Create a new company";"Ajouter une société"
+"Create a new place";"Ajouter un emploi"
 "Description";"Description"
 "Display Search";"Afficher la recherche"
 "Display contact";"Affichage du contact"
@@ -35,15 +42,19 @@
 "Import an icon";"Importer une icône"
 "Import an icon image";"Importer une icône"
 "Income from:";"Rémunération entre:"
+"Is active";"Publiée ?"
 "Job";"Emploi"
 "Keywords";"Mot clés"
 "Logo";"Logo"
+"Manage";"Gérer"
+"Missing category_id";"Paramètre manquant category_id"
 "Name";"Nom"
 "New contact for: ";"Nouveau contact pour:"
 "New contact for: %s";"Nouveau contact pour: %s"
 "None";"Aucun"
 "Place";"Emploi"
 "Place enabled";"Emploi activé"
+"Place saved.";"Emploi enregistrée"
 "Place successfully deleted.";"Emploi supprimé."
 "Places";"Emplois"
 "Success.";"Succès"
@@ -51,9 +62,11 @@
 "The category you are trying to edit doesn't exists.";"La catégorie que vous tentez d'éditer n'existe pas."
 "The company you are trying to edit doesn't exists.";"La société que vous tentez d'éditer n'existe pas."
 "The place you are trying to edit doesn't exists.";"L'emploi que vous tentez d'éditer n'existe pas."
+"This place is inactive.";"Cette annonce est désactivée"
 "Use global configuration";"Utiliser le paramètre global"
 "Website";"Site web"
 "You are about to remove this Category !\n Are you sure ?";"Vous êtes sur le point de supprimer cette catégorie ! Êtes vous sûr ?"
 "You are about to remove this Company and all the associated Places !\n Are you sure ?";"Vous êtes sur le point de supprimer cette société et tout les emplois associés ! Êtes vous sûr ?"
 "You are about to remove this Place !\n Are you sure ?";"Vous êtes sur le point de supprimer cet emploi ! Êtes vous sûr ?"
+"You are not allowed to create a place for this company";"Vous n'êtes pas autorisé à créer un emploi pour cette société"
 "to:";"et:"
