--- a/resources/translations/fr/job.csv
+++ b/resources/translations/fr/job.csv
@@ -1,4 +1,5 @@
 "A new contact form has been sent for the following offer:";"Un nouveau formulaire de contact à été envoyé:"
+"Add a position";"Créer une nouvelle offre"
 "Add category";"Ajouter une catégorie"
 "Add company";"Ajouter une société"
 "Add place";"Ajouter un emploi"
@@ -20,6 +21,7 @@
 "Create a new Category";"Ajouter une catégorie"
 "Create a new company";"Ajouter une société"
 "Create a new place";"Ajouter un emploi"
+"Create a new position";"Créer une nouvelle offre"
 "Description";"Description"
 "Display Search";"Afficher la recherche"
 "Display contact";"Affichage du contact"
@@ -57,6 +59,7 @@
 "Place saved.";"Emploi enregistrée"
 "Place successfully deleted.";"Emploi supprimé."
 "Places";"Emplois"
+"Positions";"Offres"
 "Success.";"Succès"
 "Thank you";"Merci"
 "The category you are trying to edit doesn't exists.";"La catégorie que vous tentez d'éditer n'existe pas."
