--- a/resources/translations/default/job.csv
+++ b/resources/translations/default/job.csv
@@ -85,3 +85,26 @@
 "Add a position"
 "Positions"
 "Create a new position"
+"Contact e-mail"
+"Input your keywords ..."
+"Search"
+"Distance"
+"City"
+"Select a city ..."
+"Clear"
+"Search..."
+"Locality"
+"Full name"
+"E-mail"
+"Message"
+"Submit"
+"Contact"
+"My companies"
+"Create position"
+"For more options use the editor"
+"Publish"
+"Manage company"
+"Save"
+"Manage place"
+"Views"
+"Keywords, coma separated"
